<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_broker"
                android:layout_alignParentLeft="true"
                android:textSize="20sp"
                android:textColor="@color/colorText1"/>

            <TextView
                android:id="@+id/broker_id"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_toRightOf="@+id/text1"
                android:textSize="15sp"
                android:hint="@string/textView_tips"/>

            <ImageView
                android:id="@+id/connectState"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:scaleType="centerInside"
                android:src="@drawable/circle" />


            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1">

                <TextView
                    android:id="@+id/publish_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/publish"
                    android:textSize="30dp"
                    android:onClick="replaceFramentToPublish"/>

                <TextView
                    android:id="@+id/subscribe_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/subscribe"
                    android:textSize="30dp"
                    android:onClick="replaceFramentToSubcribe"/>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/publish_subcribe_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/line2"/>


        </RelativeLayout>



    //DrawerLayout的内容
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.study.mqtt.Fragment.DrawerLayoutFragment"
        android:layout_gravity="start" />


</androidx.drawerlayout.widget.DrawerLayout>